 * libpcsxcore/socket.h: Likewise.
 * libpcsxcore/psxinterpreter.c: Likewise.
 * libpcsxcore/psxmem.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/r3000a.h: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/Makefile.am: Likewise.
 * gui/Config.c: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Gtk2Gui.c: Likewise.

October 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/gpucfg-0.1df/main.c: Fixed: when trying to choose
   resolution for dfxvideo, values>1024x768 doesn't save.
 * plugins/peopsxgl/cfg.c: Minor cleanup.
 * plugins/peopsxgl/gpu.c: Use fork()/execl() instead of system() to launch
   the configuration utility.
 * plugins/dfsound/cfg.c: Likewise.
 * plugins/dfxvideo/cfg.c: Likewise.
 * plugins/dfinput/pad.c: Likewise.
 * plugins/dfcdrom/cdr.c: Likewise.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Display the dialog box at
   the center of the screen. Removed unused About dialog box.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Minor cleanup.
 * plugins/dfinput/dfinput.glade2: Fixed problem with new version of glade-3.
 * plugins/dfcdrom/cfgCdr.glade: Likewise.
 * libpcsxcore/cdriso.c: Fixed crash bug when the .toc/.cue file contains
   empty lines.

October 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Removed the "Enable XA" option
   as we already have such an option in the main emu.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfsound/cfg.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/externals.h: Likewise.
 * plugins/dfsound/psemu.c: Likewise.

October 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Gtk2Gui.c: Disable the "Graphics/Sound/CD-ROM/Controller" menuitems
   when the emu is already running.
 * data/pcsx.glade2: Merged the "Controller 1" and "Controller 2" menuitems.
